changed getLast and getFirst to get(size - 1) and get(0) due to github dont recognise this functions